# tri_exp

./: .bazelproject  .gitignore  CMakeLists.txt  README.md  WORKSPACE  anti_podal_grasp.cc  anti_podal_grasp.h  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  bazel-tri_exp  book_pulling.cc  calibration_hand_eye.cc  calibration_result.txt  demo_check_calibration.cc  demo_test_elastic_fusion.cc  demo_visualize_fused_cloud.cc  director_hack_scripts  drake-WORKSPACE  efusion_interface.cc  efusion_interface.h  hand_eye.cc  hand_eye.h  jjz_controller_main.cc  kuka_camera_calibrate.cc  openni_comm.cc  openni_comm.h  pcl_save_pcd.cc  perception.cc  perception.h  point_cloud_registration.cc  point_cloud_registration.h  robot_cmd_tool.cc  robot_comm.cc  robot_comm.h  single_object_grasping_test.cc  tools
calibration_info/: hand_eye_cali_new.txt  ir_camera_intrinsics  rgb_camera_instrinsics
matlabcalibrationfiles/: computeAB.m  demo_calibrate_hand_eye.m  liang.m  output.txt  park.m  read_poses.m  refit_translation.m
planar_rgb_pose/: CMakeLists.txt  planar_rgb_model.cc  planar_rgb_model.h  planar_rgb_pose_estimator.cc  planar_rgb_pose_estimator.h  test_planar_rgb_pose_estimation.cc
src/: BUILD  CMakeLists.txt  perception.cc  perception.h  plane_seg_dbg.cc  point_cloud_registration.cc  pose_est_sim.cc  use_pcl_sac_segmentation.sh
tools/: BUILD  CROSSTOOL  bazel.rc
